--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
   <p><em>Share this link with your friends! It’s a fun guessing game with 6 chances to win. 🍀</em></p>
-  <h2>👑 Welcome to Nandini's Wordle World!! ❤️</h2><p><strong>Hey Champion!</strong> Can you crack the 5-letter secret word? You have 6 tries. Go for it!</p>
+  <h2> Welcome to Nandini's Wordle World!! </h2><p><strong>Hey Champion!</strong> Can you crack the 5-letter secret word? You have 6 tries. Go for it!</p>
   
   
   <div class="hint">
@@ -74,7 +74,7 @@
     ❌ <strong>X</strong>: Letter is not in the word at all<br>
     ✨ <strong>Hint:</strong> The word belongs to one of these categories: fruit, furniture, or object you use every day.<br>
     Type a guess and hit <strong>Submit</strong>!
-  <div class="badge">🎧🍵👩‍💻🧋💻💬 – Tech & Tea Bestie mode activated.</div>
+  <div class="badge"> – Tech & Tea Bestie mode activated.</div>
     <button onclick="location.reload()">Play Again</button>
   </div>
   <p style="font-size: 15px; color: #444;"><strong>This game is brought to you by Nandini Hukkeri… but YOU are the true Champion!</strong></p>
@@ -132,7 +132,7 @@
   </script>
 <footer style="margin-top: 40px; font-size: 13px; color: #555;">
     <hr>
-    <p>Made with ❤️ by Nandini & her buddy Chattie</p>
+    <p>Made by Nandini & her buddy Chattie</p>
   </footer>
 </body>
 </html>
